--- a/Website-Files/style.css
+++ b/Website-Files/style.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Courier New', monospace;
     font-weight: 900;
     font-size: 12px;
     transition: 0.4s;
